Issue#SB-21097 Need to hide Scrollbar on right side in forum modal

--- a/src/app/client/src/app/modules/discussion/components/forum/forum.component.scss
+++ b/src/app/client/src/app/modules/discussion/components/forum/forum.component.scss
@@ -6,14 +6,12 @@
     padding: 0;
     border-radius: 0;
     overflow: hidden;
-    position: relative;
-    z-index: 2;
   }
+
   iframe {
     width: 100%;
     height: 100vh;
     border: 0;
-    overflow: hidden;
   }
   .sb-modal .ui.modal>.close {
     color: var(--black);
